--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-parcelize'
+    id "androidx.navigation.safeargs"
 }
 
 android {
@@ -45,12 +46,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // Navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
-    // GSON
-    implementation 'com.google.code.gson:gson:2.8.6'
-
     // Lottie
-    implementation 'com.airbnb.android:lottie:4.0.0'
+    implementation 'com.airbnb.android:lottie:4.1.0'
 }
