--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dicoding.bfaa.submission">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,10 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Submission">
         <activity
-            android:name="com.dicoding.bfaa.submission.activity.MainActivity"
-            android:exported="true" />
+            android:name="com.dicoding.bfaa.submission.ui.main.MainActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.dicoding.bfaa.submission.activity.SplashActivity"
+            android:name="com.dicoding.bfaa.submission.ui.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
