--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "GITHUB_TOKEN", '"token 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"')
     }
 
     buildTypes {
