--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Submission">
         <activity
-            android:name="com.dicoding.bfaa.submission.ui.main.MainActivity"
+            android:name=".ui.settings.SettingsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.main.MainActivity"
             android:exported="true"
+            android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.dicoding.bfaa.submission.ui.splash.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
